<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSelect"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLastPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:hint="Giá cao nhất hôm nay"

                android:textAlignment="center"
                android:textColor="@color/lowerwhite"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvProfitabilityRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Tỉ lệ tăng giảm"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastPrice"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvLastDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="Ngày"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfitabilityRate"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/open"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastDay" />

            <TextView
                android:id="@+id/tvOpenValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvOpen"
                app:layout_constraintTop_toTopOf="@+id/tvOpen" />

            <TextView
                android:id="@+id/tvMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/max"
                android:textColor="@color/lowerwhite"

                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOpen" />

            <TextView
                android:id="@+id/tvMaxValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMax"
                app:layout_constraintTop_toTopOf="@+id/tvMax" />

            <TextView
                android:id="@+id/tvMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/min"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMax" />

            <TextView
                android:id="@+id/tvMinValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMin"
                app:layout_constraintTop_toTopOf="@+id/tvMin" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/close"
                android:textColor="@color/lowerwhite"

                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMin" />

            <TextView
                android:id="@+id/tvCloseValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvClose"
                app:layout_constraintTop_toTopOf="@+id/tvClose" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/weight"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvClose" />

            <TextView
                android:id="@+id/tvWeightValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvWeight"
                app:layout_constraintTop_toTopOf="@+id/tvWeight" />

            <TextView
                android:id="@+id/tvMaxInThreeMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:maxLines="2"
                android:text="@string/max_in_three_month"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

            <TextView
                android:id="@+id/tvMaxInThreeMonthValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMaxInThreeMonth"
                app:layout_constraintTop_toTopOf="@+id/tvMaxInThreeMonth" />

            <TextView
                android:id="@+id/tvMinInThreeMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:maxLines="2"
                android:text="@string/min_in_three_month"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMaxInThreeMonth" />

            <TextView
                android:id="@+id/tvMinInThreeMonthValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMinInThreeMonth"
                app:layout_constraintTop_toTopOf="@+id/tvMinInThreeMonth" />

            <TextView
                android:id="@+id/tvAverageVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/average_volume"
                android:textColor="@color/lowerwhite"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMinInThreeMonth" />

            <TextView
                android:id="@+id/tvAverageVolumeValue"
                android:layout_width="0.dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAverageVolume"
                app:layout_constraintTop_toTopOf="@+id/tvAverageVolume" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#DDDDDD"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAverageVolume">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/black"
                    tools:ignore="Suspicious0dp">

                    <TextView
                        android:id="@+id/tvOpenInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Open: "
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tvCloseInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Close: "
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/black"
                    tools:ignore="Suspicious0dp">

                    <TextView
                        android:id="@+id/tvMaxInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Max: "
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/tvMinInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Min: "
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAverageVolume"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tvLastTimeUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineChart" />

            <TextView
                android:id="@+id/tvStockCodeInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/stock_code_info"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastTimeUpdated" />

            <TextView
                android:id="@+id/tvStockCodeInfoContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/stock_code_info"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStockCodeInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSelect"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:endIconTint="@color/teal_700">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_code"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/stock_code"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>
